--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack --mode development",
-    "start": "cross-env NODE_ENV=development webpack-dev-server --mode development --open"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --mode development --open",
+    "start": "cross-env NODE_ENV=production webpack --mode production",
+    "build" : "cross-env NODE_ENV=production webpack --mode production"
   },
   "author": "",
   "license": "ISC",
